refactor PR 리뷰 피드백 반영 - 코드 품질 개선
- CodeRabbit 리뷰 피드백 반영

## 주요 변경사항

### 코딩 가이드라인 준수
- Service/Command 메서드 파라미터에 final 키워드 추가
- Service 테스트 변수명 sut(System Under Test)로 변경

### 코드 품질 개선
- Random → ThreadLocalRandom 변경 (스레드 안전성)
- Collectors.toList() → .toList() 변경 (Java 16+ 스타일)
- FamilyMemberTagInfo.from() 중복 메서드 제거
- ModifyFamilyMemberTagCommand name trim 적용
- ModifyFamilyMemberTagService 재조회 제거 최적화

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>